sdk/c/include/luxfhe.h

// =============================================================================
// Error Codes
// =============================================================================

typedef enum {
    LUXFHE_OK = 0,
    LUXFHE_ERR_NULL_POINTER = -1,
    LUXFHE_ERR_INVALID_PARAM = -2,
    LUXFHE_ERR_ALLOCATION = -3,
    LUXFHE_ERR_NOT_INITIALIZED = -4,
    LUXFHE_ERR_KEY_NOT_SET = -5,
    LUXFHE_ERR_SERIALIZATION = -6,
    LUXFHE_ERR_DESERIALIZATION = -7,
    LUXFHE_ERR_OPERATION = -8,
    LUXFHE_ERR_TYPE_MISMATCH = -9,
    LUXFHE_ERR_OUT_OF_RANGE = -10,
} LuxFHE_Error;
// =============================================================================
// Opaque Handle Types
// =============================================================================

// All handles are opaque pointers to internal Go structures
typedef struct LuxFHE_Context_s* LuxFHE_Context;
typedef struct LuxFHE_SecretKey_s* LuxFHE_SecretKey;
typedef struct LuxFHE_PublicKey_s* LuxFHE_PublicKey;
typedef struct LuxFHE_Ciphertext_s* LuxFHE_Ciphertext;
typedef struct LuxFHE_Integer_s* LuxFHE_Integer;
typedef struct LuxFHE_Evaluator_s* LuxFHE_Evaluator;
LuxFHE_Error luxfhe_int_ge(LuxFHE_Evaluator eval,
                            LuxFHE_Integer a,
                            LuxFHE_Integer b,
                            LuxFHE_Ciphertext* out);
LuxFHE_Error luxfhe_int_min(LuxFHE_Evaluator eval,
                             LuxFHE_Integer a,
                             LuxFHE_Integer b,
                             LuxFHE_Integer* out);
LuxFHE_Error luxfhe_int_max(LuxFHE_Evaluator eval,
                             LuxFHE_Integer a,
                             LuxFHE_Integer b,
                             LuxFHE_Integer* out);
// =============================================================================
// Integer Bitwise Operations
// =============================================================================

LuxFHE_Error luxfhe_int_bitand(LuxFHE_Evaluator eval,
                                LuxFHE_Integer a,
                                LuxFHE_Integer b,
                                LuxFHE_Integer* out);
LuxFHE_Error luxfhe_int_bitor(LuxFHE_Evaluator eval,
                               LuxFHE_Integer a,
                               LuxFHE_Integer b,
                               LuxFHE_Integer* out);
LuxFHE_Error luxfhe_int_bitxor(LuxFHE_Evaluator eval,
                                LuxFHE_Integer a,
                                LuxFHE_Integer b,
                                LuxFHE_Integer* out);
LuxFHE_Error luxfhe_int_bitnot(LuxFHE_Evaluator eval,
                                LuxFHE_Integer a,
                                LuxFHE_Integer* out);
LuxFHE_Error luxfhe_int_shl(LuxFHE_Evaluator eval,
                             LuxFHE_Integer a,
                             uint32_t bits,
                             LuxFHE_Integer* out);
LuxFHE_Error luxfhe_int_shr(LuxFHE_Evaluator eval,
                             LuxFHE_Integer a,
                             uint32_t bits,
                             LuxFHE_Integer* out);
// =============================================================================
// Control Flow
// =============================================================================

// Select: if cond then if_true else if_false
LuxFHE_Error luxfhe_int_select(LuxFHE_Evaluator eval,
                                LuxFHE_Ciphertext cond,
                                LuxFHE_Integer if_true,
                                LuxFHE_Integer if_false,
                                LuxFHE_Integer* out);
// =============================================================================
// Serialization
// =============================================================================

// Serialize to bytes (caller must free with luxfhe_bytes_free)
LuxFHE_Error luxfhe_secretkey_serialize(LuxFHE_SecretKey sk,
                                         uint8_t** data, size_t* len);
LuxFHE_Error luxfhe_publickey_serialize(LuxFHE_PublicKey pk,
                                         uint8_t** data, size_t* len);
LuxFHE_Error luxfhe_ciphertext_serialize(LuxFHE_Ciphertext ct,
                                          uint8_t** data, size_t* len);
LuxFHE_Error luxfhe_integer_serialize(LuxFHE_Integer ct,
                                       uint8_t** data, size_t* len);
// Deserialize from bytes
LuxFHE_Error luxfhe_secretkey_deserialize(LuxFHE_Context ctx,
                                           const uint8_t* data, size_t len,
                                           LuxFHE_SecretKey* out);
LuxFHE_Error luxfhe_publickey_deserialize(LuxFHE_Context ctx,
                                           const uint8_t* data, size_t len,
                                           LuxFHE_PublicKey* out);
LuxFHE_Error luxfhe_ciphertext_deserialize(LuxFHE_Context ctx,
                                            const uint8_t* data, size_t len,
                                            LuxFHE_Ciphertext* out);
LuxFHE_Error luxfhe_integer_deserialize(LuxFHE_Context ctx,
                                         const uint8_t* data, size_t len,
                                         LuxFHE_Integer* out);
// Free serialized bytes
void luxfhe_bytes_free(uint8_t* data);