sdk/rust/target/debug/build/luxfhe-a08a4af7c8ea8a90/out/bindings.rs

unsafe extern "C" {
    pub fn luxfhe_int_ge(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_min(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_max(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_bitand(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_bitor(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_bitxor(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        b: LuxFHE_Integer,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_bitnot(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_shl(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        bits: u32,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_shr(
        eval: LuxFHE_Evaluator,
        a: LuxFHE_Integer,
        bits: u32,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_int_select(
        eval: LuxFHE_Evaluator,
        cond: LuxFHE_Ciphertext,
        if_true: LuxFHE_Integer,
        if_false: LuxFHE_Integer,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_secretkey_serialize(
        sk: LuxFHE_SecretKey,
        data: *mut *mut u8,
        len: *mut usize,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_publickey_serialize(
        pk: LuxFHE_PublicKey,
        data: *mut *mut u8,
        len: *mut usize,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_ciphertext_serialize(
        ct: LuxFHE_Ciphertext,
        data: *mut *mut u8,
        len: *mut usize,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_integer_serialize(
        ct: LuxFHE_Integer,
        data: *mut *mut u8,
        len: *mut usize,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_secretkey_deserialize(
        ctx: LuxFHE_Context,
        data: *const u8,
        len: usize,
        out: *mut LuxFHE_SecretKey,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_publickey_deserialize(
        ctx: LuxFHE_Context,
        data: *const u8,
        len: usize,
        out: *mut LuxFHE_PublicKey,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_ciphertext_deserialize(
        ctx: LuxFHE_Context,
        data: *const u8,
        len: usize,
        out: *mut LuxFHE_Ciphertext,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_integer_deserialize(
        ctx: LuxFHE_Context,
        data: *const u8,
        len: usize,
        out: *mut LuxFHE_Integer,
    ) -> LuxFHE_Error;
}
unsafe extern "C" {
    pub fn luxfhe_bytes_free(data: *mut u8);
}
